# dog_tracker

./: CMakeLists.txt  LICENSE  README.md  build.bat
include/: cameraController.h  circularBuffer.h  configLoader.h  producerConsumer.h  ptzController.h
source/: cameraController.cpp  circularBuffer.cpp  configLoader.cpp  curl_test.cpp  main.cpp  producerConsumer.cpp  ptzController.cpp
